--- a/BåtklubbGladPirat/BåtklubbGladPirat/BåtklubbGladPirat.csproj
+++ b/BåtklubbGladPirat/BåtklubbGladPirat/BåtklubbGladPirat.csproj
@@ -41,7 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model.cs" />
+    <Compile Include="BoatModel.cs" />
+    <Compile Include="MemberModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
