--- a/BåtklubbGladPirat/BåtklubbGladPirat/BåtklubbGladPirat.csproj
+++ b/BåtklubbGladPirat/BåtklubbGladPirat/BåtklubbGladPirat.csproj
@@ -41,6 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\Repository\BoatRepository.cs" />
+    <Compile Include="Model\Repository\MemberRepository.cs" />
+    <Compile Include="Model\Repository\Repository.cs" />
     <Compile Include="View\BoatView.cs" />
     <Compile Include="View\MemberView.cs" />
     <Compile Include="View\MenuView.cs" />
